Implementação da controller de produtos e configuração do Tomcat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+#AMBIENTE
+# spring.profiles.active=dev
 
+#CONFIGURACAO APLICACAO
+spring.application.name=springboot-test
+info.version=0.0.1-SNAPSHOT
+info.description=springboot-test
+
+#CONFIGURACAO TOMCAT
+server.port=8081
+
+# CONFIG LOGGER
+logging.level.org.springframework=ERROR
+logging.level.br.com.sylverio=DEBUG
+logging.pattern.console=%d{HH:mm:ss.sss} %5p %40logger{36} : %msg%n
+logging.pattern.file=%d{HH:mm:ss.sss} %5p ${spring.application.name}:${server.port}/%logger{0} : %msg%n
+
+spring.main.banner-mode=off
+spring.jackson.default-property-inclusion=non_null
